trunk/lispbuilder-opengl/build/gl_1_1.h



/*
 * Datatypes
 */
typedef unsigned int	GLenum;

typedef unsigned char	GLboolean;

typedef unsigned int	GLbitfield;

typedef void		GLvoid;

typedef signed char	GLbyte;		/* 1-byte signed */

typedef short		GLshort;	/* 2-byte signed */

typedef int		GLint;		/* 4-byte signed */

typedef unsigned char	GLubyte;	/* 1-byte unsigned */

typedef unsigned short	GLushort;	/* 2-byte unsigned */

typedef unsigned int	GLuint;		/* 4-byte unsigned */

typedef int		GLsizei;	/* 4-byte signed */

typedef float		GLfloat;	/* single precision float */

typedef double		GLdouble;	/* double precision float */

typedef double		GLclampd;	/* double precision float in [0,1] */


GLAPI void GLAPIENTRY glDisableClientState( GLenum cap );  /* 1.1 */



GLAPI void GLAPIENTRY glGetBooleanv( GLenum pname, GLboolean *params );


GLAPI void GLAPIENTRY glGetDoublev( GLenum pname, GLdouble *params );


GLAPI void GLAPIENTRY glGetFloatv( GLenum pname, GLfloat *params );


GLAPI void GLAPIENTRY glGetIntegerv( GLenum pname, GLint *params );



GLAPI void GLAPIENTRY glPushAttrib( GLbitfield mask );


GLAPI void GLAPIENTRY glPopAttrib( void );



GLAPI void GLAPIENTRY glPushClientAttrib( GLbitfield mask );  /* 1.1 */


GLAPI void GLAPIENTRY glPopClientAttrib( void );  /* 1.1 */



GLAPI GLint GLAPIENTRY glRenderMode( GLenum mode );


GLAPI GLenum GLAPIENTRY glGetError( void );


GLAPI const GLubyte * GLAPIENTRY glGetString( GLenum name );


GLAPI void GLAPIENTRY glFinish( void );


GLAPI void GLAPIENTRY glFlush( void );


GLAPI void GLAPIENTRY glHint( GLenum target, GLenum mode );



/*
 * Depth Buffer
 */

GLAPI void GLAPIENTRY glClearDepth( GLclampd depth );


GLAPI void GLAPIENTRY glDepthFunc( GLenum func );


GLAPI void GLAPIENTRY glDepthMask( GLboolean flag );


GLAPI void GLAPIENTRY glDepthRange( GLclampd near_val, GLclampd far_val );



/*
 * Accumulation Buffer
 */

GLAPI void GLAPIENTRY glClearAccum( GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha );


GLAPI void GLAPIENTRY glAccum( GLenum op, GLfloat value );



/*
 * Transformation
 */

GLAPI void GLAPIENTRY glMatrixMode( GLenum mode );


GLAPI void GLAPIENTRY glOrtho( GLdouble left, GLdouble right,
                                 GLdouble bottom, GLdouble top,
                                 GLdouble near_val, GLdouble far_val );


GLAPI void GLAPIENTRY glFrustum( GLdouble left, GLdouble right,
                                   GLdouble bottom, GLdouble top,
                                   GLdouble near_val, GLdouble far_val );


GLAPI void GLAPIENTRY glViewport( GLint x, GLint y,
                                    GLsizei width, GLsizei height );


GLAPI void GLAPIENTRY glPushMatrix( void );


GLAPI void GLAPIENTRY glPopMatrix( void );


GLAPI void GLAPIENTRY glLoadIdentity( void );


GLAPI void GLAPIENTRY glLoadMatrixd( const GLdouble *m );

GLAPI void GLAPIENTRY glLoadMatrixf( const GLfloat *m );


GLAPI void GLAPIENTRY glMultMatrixd( const GLdouble *m );

GLAPI void GLAPIENTRY glMultMatrixf( const GLfloat *m );


GLAPI void GLAPIENTRY glRotated( GLdouble angle,
                                   GLdouble x, GLdouble y, GLdouble z );

GLAPI void GLAPIENTRY glRotatef( GLfloat angle,
                                   GLfloat x, GLfloat y, GLfloat z );


GLAPI void GLAPIENTRY glScaled( GLdouble x, GLdouble y, GLdouble z );

GLAPI void GLAPIENTRY glScalef( GLfloat x, GLfloat y, GLfloat z );


GLAPI void GLAPIENTRY glTranslated( GLdouble x, GLdouble y, GLdouble z );

GLAPI void GLAPIENTRY glTranslatef( GLfloat x, GLfloat y, GLfloat z );



/*
 * Display Lists
 */

GLAPI GLboolean GLAPIENTRY glIsList( GLuint list );


GLAPI void GLAPIENTRY glDeleteLists( GLuint list, GLsizei range );


GLAPI GLuint GLAPIENTRY glGenLists( GLsizei range );


GLAPI void GLAPIENTRY glNewList( GLuint list, GLenum mode );


GLAPI void GLAPIENTRY glEndList( void );


GLAPI void GLAPIENTRY glCallList( GLuint list );


GLAPI void GLAPIENTRY glCallLists( GLsizei n, GLenum type,
                                     const GLvoid *lists );


GLAPI void GLAPIENTRY glListBase( GLuint base );



/*
 * Drawing Functions
 */

GLAPI void GLAPIENTRY glBegin( GLenum mode );


GLAPI void GLAPIENTRY glEnd( void );



GLAPI void GLAPIENTRY glVertex2d( GLdouble x, GLdouble y );

GLAPI void GLAPIENTRY glVertex2f( GLfloat x, GLfloat y );

GLAPI void GLAPIENTRY glVertex2i( GLint x, GLint y );

GLAPI void GLAPIENTRY glVertex2s( GLshort x, GLshort y );


GLAPI void GLAPIENTRY glVertex3d( GLdouble x, GLdouble y, GLdouble z );

GLAPI void GLAPIENTRY glVertex3f( GLfloat x, GLfloat y, GLfloat z );

GLAPI void GLAPIENTRY glVertex3i( GLint x, GLint y, GLint z );

GLAPI void GLAPIENTRY glVertex3s( GLshort x, GLshort y, GLshort z );


GLAPI void GLAPIENTRY glVertex4d( GLdouble x, GLdouble y, GLdouble z, GLdouble w );

GLAPI void GLAPIENTRY glVertex4f( GLfloat x, GLfloat y, GLfloat z, GLfloat w );

GLAPI void GLAPIENTRY glVertex4i( GLint x, GLint y, GLint z, GLint w );

GLAPI void GLAPIENTRY glVertex4s( GLshort x, GLshort y, GLshort z, GLshort w );


GLAPI void GLAPIENTRY glVertex2dv( const GLdouble *v );

GLAPI void GLAPIENTRY glVertex2fv( const GLfloat *v );

GLAPI void GLAPIENTRY glVertex2iv( const GLint *v );

GLAPI void GLAPIENTRY glVertex2sv( const GLshort *v );


GLAPI void GLAPIENTRY glVertex3dv( const GLdouble *v );

GLAPI void GLAPIENTRY glVertex3fv( const GLfloat *v );

GLAPI void GLAPIENTRY glVertex3iv( const GLint *v );

GLAPI void GLAPIENTRY glVertex3sv( const GLshort *v );


GLAPI void GLAPIENTRY glVertex4dv( const GLdouble *v );

GLAPI void GLAPIENTRY glVertex4fv( const GLfloat *v );

GLAPI void GLAPIENTRY glVertex4iv( const GLint *v );

GLAPI void GLAPIENTRY glVertex4sv( const GLshort *v );



GLAPI void GLAPIENTRY glNormal3b( GLbyte nx, GLbyte ny, GLbyte nz );

GLAPI void GLAPIENTRY glNormal3d( GLdouble nx, GLdouble ny, GLdouble nz );

GLAPI void GLAPIENTRY glNormal3f( GLfloat nx, GLfloat ny, GLfloat nz );

GLAPI void GLAPIENTRY glNormal3i( GLint nx, GLint ny, GLint nz );

GLAPI void GLAPIENTRY glNormal3s( GLshort nx, GLshort ny, GLshort nz );


GLAPI void GLAPIENTRY glNormal3bv( const GLbyte *v );

GLAPI void GLAPIENTRY glNormal3dv( const GLdouble *v );

GLAPI void GLAPIENTRY glNormal3fv( const GLfloat *v );

GLAPI void GLAPIENTRY glNormal3iv( const GLint *v );

GLAPI void GLAPIENTRY glNormal3sv( const GLshort *v );



GLAPI void GLAPIENTRY glIndexd( GLdouble c );

GLAPI void GLAPIENTRY glIndexf( GLfloat c );

GLAPI void GLAPIENTRY glIndexi( GLint c );

GLAPI void GLAPIENTRY glIndexs( GLshort c );

GLAPI void GLAPIENTRY glIndexub( GLubyte c );  /* 1.1 */


GLAPI void GLAPIENTRY glIndexdv( const GLdouble *c );

GLAPI void GLAPIENTRY glIndexfv( const GLfloat *c );

GLAPI void GLAPIENTRY glIndexiv( const GLint *c );

GLAPI void GLAPIENTRY glIndexsv( const GLshort *c );

GLAPI void GLAPIENTRY glIndexubv( const GLubyte *c );  /* 1.1 */


GLAPI void GLAPIENTRY glColor3b( GLbyte red, GLbyte green, GLbyte blue );

GLAPI void GLAPIENTRY glColor3d( GLdouble red, GLdouble green, GLdouble blue );

GLAPI void GLAPIENTRY glColor3f( GLfloat red, GLfloat green, GLfloat blue );

GLAPI void GLAPIENTRY glColor3i( GLint red, GLint green, GLint blue );

GLAPI void GLAPIENTRY glColor3s( GLshort red, GLshort green, GLshort blue );

GLAPI void GLAPIENTRY glColor3ub( GLubyte red, GLubyte green, GLubyte blue );

GLAPI void GLAPIENTRY glColor3ui( GLuint red, GLuint green, GLuint blue );

GLAPI void GLAPIENTRY glColor3us( GLushort red, GLushort green, GLushort blue );


GLAPI void GLAPIENTRY glColor4b( GLbyte red, GLbyte green,
                                   GLbyte blue, GLbyte alpha );

GLAPI void GLAPIENTRY glColor4d( GLdouble red, GLdouble green,
                                   GLdouble blue, GLdouble alpha );

GLAPI void GLAPIENTRY glColor4f( GLfloat red, GLfloat green,
                                   GLfloat blue, GLfloat alpha );

GLAPI void GLAPIENTRY glColor4i( GLint red, GLint green,
                                   GLint blue, GLint alpha );

GLAPI void GLAPIENTRY glColor4s( GLshort red, GLshort green,
                                   GLshort blue, GLshort alpha );

GLAPI void GLAPIENTRY glColor4ub( GLubyte red, GLubyte green,
                                    GLubyte blue, GLubyte alpha );

GLAPI void GLAPIENTRY glColor4ui( GLuint red, GLuint green,
                                    GLuint blue, GLuint alpha );

GLAPI void GLAPIENTRY glColor4us( GLushort red, GLushort green,
                                    GLushort blue, GLushort alpha );



GLAPI void GLAPIENTRY glColor3bv( const GLbyte *v );

GLAPI void GLAPIENTRY glColor3dv( const GLdouble *v );

GLAPI void GLAPIENTRY glColor3fv( const GLfloat *v );

GLAPI void GLAPIENTRY glColor3iv( const GLint *v );

GLAPI void GLAPIENTRY glColor3sv( const GLshort *v );

GLAPI void GLAPIENTRY glColor3ubv( const GLubyte *v );

GLAPI void GLAPIENTRY glColor3uiv( const GLuint *v );

GLAPI void GLAPIENTRY glColor3usv( const GLushort *v );


GLAPI void GLAPIENTRY glColor4bv( const GLbyte *v );

GLAPI void GLAPIENTRY glColor4dv( const GLdouble *v );

GLAPI void GLAPIENTRY glColor4fv( const GLfloat *v );

GLAPI void GLAPIENTRY glColor4iv( const GLint *v );

GLAPI void GLAPIENTRY glColor4sv( const GLshort *v );

GLAPI void GLAPIENTRY glColor4ubv( const GLubyte *v );

GLAPI void GLAPIENTRY glColor4uiv( const GLuint *v );

GLAPI void GLAPIENTRY glColor4usv( const GLushort *v );



GLAPI void GLAPIENTRY glTexCoord1d( GLdouble s );

GLAPI void GLAPIENTRY glTexCoord1f( GLfloat s );

GLAPI void GLAPIENTRY glTexCoord1i( GLint s );

GLAPI void GLAPIENTRY glTexCoord1s( GLshort s );


GLAPI void GLAPIENTRY glTexCoord2d( GLdouble s, GLdouble t );

GLAPI void GLAPIENTRY glTexCoord2f( GLfloat s, GLfloat t );

GLAPI void GLAPIENTRY glTexCoord2i( GLint s, GLint t );

GLAPI void GLAPIENTRY glTexCoord2s( GLshort s, GLshort t );


GLAPI void GLAPIENTRY glTexCoord3d( GLdouble s, GLdouble t, GLdouble r );

GLAPI void GLAPIENTRY glTexCoord3f( GLfloat s, GLfloat t, GLfloat r );

GLAPI void GLAPIENTRY glTexCoord3i( GLint s, GLint t, GLint r );

GLAPI void GLAPIENTRY glTexCoord3s( GLshort s, GLshort t, GLshort r );


GLAPI void GLAPIENTRY glTexCoord4d( GLdouble s, GLdouble t, GLdouble r, GLdouble q );

GLAPI void GLAPIENTRY glTexCoord4f( GLfloat s, GLfloat t, GLfloat r, GLfloat q );

GLAPI void GLAPIENTRY glTexCoord4i( GLint s, GLint t, GLint r, GLint q );

GLAPI void GLAPIENTRY glTexCoord4s( GLshort s, GLshort t, GLshort r, GLshort q );


GLAPI void GLAPIENTRY glTexCoord1dv( const GLdouble *v );

GLAPI void GLAPIENTRY glTexCoord1fv( const GLfloat *v );

GLAPI void GLAPIENTRY glTexCoord1iv( const GLint *v );

GLAPI void GLAPIENTRY glTexCoord1sv( const GLshort *v );


GLAPI void GLAPIENTRY glTexCoord2dv( const GLdouble *v );

GLAPI void GLAPIENTRY glTexCoord2fv( const GLfloat *v );

GLAPI void GLAPIENTRY glTexCoord2iv( const GLint *v );

GLAPI void GLAPIENTRY glTexCoord2sv( const GLshort *v );


GLAPI void GLAPIENTRY glTexCoord3dv( const GLdouble *v );

GLAPI void GLAPIENTRY glTexCoord3fv( const GLfloat *v );

GLAPI void GLAPIENTRY glTexCoord3iv( const GLint *v );

GLAPI void GLAPIENTRY glTexCoord3sv( const GLshort *v );


GLAPI void GLAPIENTRY glTexCoord4dv( const GLdouble *v );

GLAPI void GLAPIENTRY glTexCoord4fv( const GLfloat *v );

GLAPI void GLAPIENTRY glTexCoord4iv( const GLint *v );

GLAPI void GLAPIENTRY glTexCoord4sv( const GLshort *v );



GLAPI void GLAPIENTRY glRasterPos2d( GLdouble x, GLdouble y );

GLAPI void GLAPIENTRY glRasterPos2f( GLfloat x, GLfloat y );

GLAPI void GLAPIENTRY glRasterPos2i( GLint x, GLint y );

GLAPI void GLAPIENTRY glRasterPos2s( GLshort x, GLshort y );


GLAPI void GLAPIENTRY glRasterPos3d( GLdouble x, GLdouble y, GLdouble z );