lispbuilder-opengl/opengl/gl_1_1.lisp


(defcfun ("glDisableClientState" glDisableClientState) :void
  (cap :unsigned-int))

(defcfun ("glGetBooleanv" glGetBooleanv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetDoublev" glGetDoublev) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetFloatv" glGetFloatv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glGetIntegerv" glGetIntegerv) :void
  (pname :unsigned-int)
  (params :pointer))

(defcfun ("glPushAttrib" glPushAttrib) :void
  (mask :unsigned-int))

(defcfun ("glPopAttrib" glPopAttrib) :void)

(defcfun ("glPushClientAttrib" glPushClientAttrib) :void
  (mask :unsigned-int))

(defcfun ("glPopClientAttrib" glPopClientAttrib) :void)

(defcfun ("glRenderMode" glRenderMode) :int
  (mode :unsigned-int))

(defcfun ("glGetError" glGetError) :unsigned-int)

(defcfun ("glGetString" glGetString) :pointer
  (name :unsigned-int))

(defcfun ("glFinish" glFinish) :void)

(defcfun ("glFlush" glFlush) :void)

(defcfun ("glHint" glHint) :void
  (target :unsigned-int)
  (mode :unsigned-int))

(defcfun ("glClearDepth" glClearDepth) :void
  (depth :double))

(defcfun ("glDepthFunc" glDepthFunc) :void
  (func :unsigned-int))

(defcfun ("glDepthMask" glDepthMask) :void
  (flag :unsigned-char))

(defcfun ("glDepthRange" glDepthRange) :void
  (near_val :double)
  (far_val :double))

(defcfun ("glClearAccum" glClearAccum) :void
  (red :float)
  (green :float)
  (blue :float)
  (alpha :float))

(defcfun ("glAccum" glAccum) :void
  (op :unsigned-int)
  (value :float))

(defcfun ("glMatrixMode" glMatrixMode) :void
  (mode :unsigned-int))

(defcfun ("glOrtho" glOrtho) :void
  (left :double)
  (right :double)
  (bottom :double)
  (top :double)
  (near_val :double)
  (far_val :double))

(defcfun ("glFrustum" glFrustum) :void
  (left :double)
  (right :double)
  (bottom :double)
  (top :double)
  (near_val :double)
  (far_val :double))

(defcfun ("glViewport" glViewport) :void
  (x :int)
  (y :int)
  (width :int)
  (height :int))

(defcfun ("glPushMatrix" glPushMatrix) :void)

(defcfun ("glPopMatrix" glPopMatrix) :void)

(defcfun ("glLoadIdentity" glLoadIdentity) :void)

(defcfun ("glLoadMatrixd" glLoadMatrixd) :void
  (m :pointer))

(defcfun ("glLoadMatrixf" glLoadMatrixf) :void
  (m :pointer))

(defcfun ("glMultMatrixd" glMultMatrixd) :void
  (m :pointer))

(defcfun ("glMultMatrixf" glMultMatrixf) :void
  (m :pointer))

(defcfun ("glRotated" glRotated) :void
  (angle :double)
  (x :double)
  (y :double)
  (z :double))

(defcfun ("glRotatef" glRotatef) :void
  (angle :float)
  (x :float)
  (y :float)
  (z :float))

(defcfun ("glScaled" glScaled) :void
  (x :double)
  (y :double)
  (z :double))

(defcfun ("glScalef" glScalef) :void
  (x :float)
  (y :float)
  (z :float))

(defcfun ("glTranslated" glTranslated) :void
  (x :double)
  (y :double)
  (z :double))

(defcfun ("glTranslatef" glTranslatef) :void
  (x :float)
  (y :float)
  (z :float))

(defcfun ("glIsList" glIsList) :unsigned-char
  (list :unsigned-int))

(defcfun ("glDeleteLists" glDeleteLists) :void
  (list :unsigned-int)
  (range :int))

(defcfun ("glGenLists" glGenLists) :unsigned-int
  (range :int))

(defcfun ("glNewList" glNewList) :void
  (list :unsigned-int)
  (mode :unsigned-int))

(defcfun ("glEndList" glEndList) :void)

(defcfun ("glCallList" glCallList) :void
  (list :unsigned-int))

(defcfun ("glCallLists" glCallLists) :void
  (n :int)
  (type :unsigned-int)
  (lists :pointer))

(defcfun ("glListBase" glListBase) :void
  (base :unsigned-int))

(defcfun ("glBegin" glBegin) :void
  (mode :unsigned-int))

(defcfun ("glEnd" glEnd) :void)

(defcfun ("glVertex2d" glVertex2d) :void
  (x :double)
  (y :double))

(defcfun ("glVertex2f" glVertex2f) :void
  (x :float)
  (y :float))

(defcfun ("glVertex2i" glVertex2i) :void
  (x :int)
  (y :int))

(defcfun ("glVertex2s" glVertex2s) :void
  (x :short)
  (y :short))

(defcfun ("glVertex3d" glVertex3d) :void
  (x :double)
  (y :double)
  (z :double))

(defcfun ("glVertex3f" glVertex3f) :void
  (x :float)
  (y :float)
  (z :float))

(defcfun ("glVertex3i" glVertex3i) :void
  (x :int)
  (y :int)
  (z :int))

(defcfun ("glVertex3s" glVertex3s) :void
  (x :short)
  (y :short)
  (z :short))

(defcfun ("glVertex4d" glVertex4d) :void
  (x :double)
  (y :double)
  (z :double)
  (w :double))

(defcfun ("glVertex4f" glVertex4f) :void
  (x :float)
  (y :float)
  (z :float)
  (w :float))

(defcfun ("glVertex4i" glVertex4i) :void
  (x :int)
  (y :int)
  (z :int)
  (w :int))

(defcfun ("glVertex4s" glVertex4s) :void
  (x :short)
  (y :short)
  (z :short)
  (w :short))

(defcfun ("glVertex2dv" glVertex2dv) :void
  (v :pointer))

(defcfun ("glVertex2fv" glVertex2fv) :void
  (v :pointer))

(defcfun ("glVertex2iv" glVertex2iv) :void
  (v :pointer))

(defcfun ("glVertex2sv" glVertex2sv) :void
  (v :pointer))

(defcfun ("glVertex3dv" glVertex3dv) :void
  (v :pointer))

(defcfun ("glVertex3fv" glVertex3fv) :void
  (v :pointer))

(defcfun ("glVertex3iv" glVertex3iv) :void
  (v :pointer))

(defcfun ("glVertex3sv" glVertex3sv) :void
  (v :pointer))

(defcfun ("glVertex4dv" glVertex4dv) :void
  (v :pointer))

(defcfun ("glVertex4fv" glVertex4fv) :void
  (v :pointer))

(defcfun ("glVertex4iv" glVertex4iv) :void
  (v :pointer))

(defcfun ("glVertex4sv" glVertex4sv) :void
  (v :pointer))

(defcfun ("glNormal3b" glNormal3b) :void
  (nx :char)
  (ny :char)
  (nz :char))

(defcfun ("glNormal3d" glNormal3d) :void
  (nx :double)
  (ny :double)
  (nz :double))

(defcfun ("glNormal3f" glNormal3f) :void
  (nx :float)
  (ny :float)
  (nz :float))

(defcfun ("glNormal3i" glNormal3i) :void
  (nx :int)
  (ny :int)
  (nz :int))

(defcfun ("glNormal3s" glNormal3s) :void
  (nx :short)
  (ny :short)
  (nz :short))

(defcfun ("glNormal3bv" glNormal3bv) :void
  (v :pointer))

(defcfun ("glNormal3dv" glNormal3dv) :void
  (v :pointer))

(defcfun ("glNormal3fv" glNormal3fv) :void
  (v :pointer))

(defcfun ("glNormal3iv" glNormal3iv) :void
  (v :pointer))

(defcfun ("glNormal3sv" glNormal3sv) :void
  (v :pointer))

(defcfun ("glIndexd" glIndexd) :void
  (c :double))

(defcfun ("glIndexf" glIndexf) :void
  (c :float))

(defcfun ("glIndexi" glIndexi) :void
  (c :int))

(defcfun ("glIndexs" glIndexs) :void
  (c :short))

(defcfun ("glIndexub" glIndexub) :void
  (c :unsigned-char))

(defcfun ("glIndexdv" glIndexdv) :void
  (c :pointer))

(defcfun ("glIndexfv" glIndexfv) :void
  (c :pointer))

(defcfun ("glIndexiv" glIndexiv) :void
  (c :pointer))

(defcfun ("glIndexsv" glIndexsv) :void
  (c :pointer))

(defcfun ("glIndexubv" glIndexubv) :void
  (c :pointer))

(defcfun ("glColor3b" glColor3b) :void
  (red :char)
  (green :char)
  (blue :char))

(defcfun ("glColor3d" glColor3d) :void
  (red :double)
  (green :double)
  (blue :double))

(defcfun ("glColor3f" glColor3f) :void
  (red :float)
  (green :float)
  (blue :float))

(defcfun ("glColor3i" glColor3i) :void
  (red :int)
  (green :int)
  (blue :int))

(defcfun ("glColor3s" glColor3s) :void
  (red :short)
  (green :short)
  (blue :short))

(defcfun ("glColor3ub" glColor3ub) :void
  (red :unsigned-char)
  (green :unsigned-char)
  (blue :unsigned-char))

(defcfun ("glColor3ui" glColor3ui) :void
  (red :unsigned-int)
  (green :unsigned-int)
  (blue :unsigned-int))

(defcfun ("glColor3us" glColor3us) :void
  (red :unsigned-short)
  (green :unsigned-short)
  (blue :unsigned-short))

(defcfun ("glColor4b" glColor4b) :void
  (red :char)
  (green :char)
  (blue :char)
  (alpha :char))

(defcfun ("glColor4d" glColor4d) :void
  (red :double)
  (green :double)
  (blue :double)
  (alpha :double))

(defcfun ("glColor4f" glColor4f) :void
  (red :float)
  (green :float)
  (blue :float)
  (alpha :float))

(defcfun ("glColor4i" glColor4i) :void
  (red :int)
  (green :int)
  (blue :int)
  (alpha :int))

(defcfun ("glColor4s" glColor4s) :void
  (red :short)
  (green :short)
  (blue :short)
  (alpha :short))

(defcfun ("glColor4ub" glColor4ub) :void
  (red :unsigned-char)
  (green :unsigned-char)
  (blue :unsigned-char)
  (alpha :unsigned-char))

(defcfun ("glColor4ui" glColor4ui) :void
  (red :unsigned-int)
  (green :unsigned-int)
  (blue :unsigned-int)
  (alpha :unsigned-int))

(defcfun ("glColor4us" glColor4us) :void
  (red :unsigned-short)
  (green :unsigned-short)
  (blue :unsigned-short)
  (alpha :unsigned-short))

(defcfun ("glColor3bv" glColor3bv) :void
  (v :pointer))

(defcfun ("glColor3dv" glColor3dv) :void
  (v :pointer))

(defcfun ("glColor3fv" glColor3fv) :void
  (v :pointer))

(defcfun ("glColor3iv" glColor3iv) :void
  (v :pointer))

(defcfun ("glColor3sv" glColor3sv) :void
  (v :pointer))

(defcfun ("glColor3ubv" glColor3ubv) :void
  (v :pointer))

(defcfun ("glColor3uiv" glColor3uiv) :void
  (v :pointer))

(defcfun ("glColor3usv" glColor3usv) :void
  (v :pointer))

(defcfun ("glColor4bv" glColor4bv) :void
  (v :pointer))

(defcfun ("glColor4dv" glColor4dv) :void
  (v :pointer))

(defcfun ("glColor4fv" glColor4fv) :void
  (v :pointer))

(defcfun ("glColor4iv" glColor4iv) :void
  (v :pointer))

(defcfun ("glColor4sv" glColor4sv) :void
  (v :pointer))

(defcfun ("glColor4ubv" glColor4ubv) :void
  (v :pointer))

(defcfun ("glColor4uiv" glColor4uiv) :void
  (v :pointer))

(defcfun ("glColor4usv" glColor4usv) :void
  (v :pointer))

(defcfun ("glTexCoord1d" glTexCoord1d) :void
  (s :double))

(defcfun ("glTexCoord1f" glTexCoord1f) :void
  (s :float))

(defcfun ("glTexCoord1i" glTexCoord1i) :void
  (s :int))

(defcfun ("glTexCoord1s" glTexCoord1s) :void
  (s :short))

(defcfun ("glTexCoord2d" glTexCoord2d) :void
  (s :double)
  (t_arg1 :double))

(defcfun ("glTexCoord2f" glTexCoord2f) :void
  (s :float)
  (t_arg1 :float))

(defcfun ("glTexCoord2i" glTexCoord2i) :void
  (s :int)
  (t_arg1 :int))

(defcfun ("glTexCoord2s" glTexCoord2s) :void
  (s :short)
  (t_arg1 :short))

(defcfun ("glTexCoord3d" glTexCoord3d) :void
  (s :double)
  (t_arg1 :double)
  (r :double))

(defcfun ("glTexCoord3f" glTexCoord3f) :void
  (s :float)
  (t_arg1 :float)
  (r :float))

(defcfun ("glTexCoord3i" glTexCoord3i) :void
  (s :int)
  (t_arg1 :int)
  (r :int))

(defcfun ("glTexCoord3s" glTexCoord3s) :void
  (s :short)
  (t_arg1 :short)
  (r :short))

(defcfun ("glTexCoord4d" glTexCoord4d) :void
  (s :double)
  (t_arg1 :double)
  (r :double)
  (q :double))

(defcfun ("glTexCoord4f" glTexCoord4f) :void
  (s :float)
  (t_arg1 :float)
  (r :float)
  (q :float))

(defcfun ("glTexCoord4i" glTexCoord4i) :void
  (s :int)
  (t_arg1 :int)
  (r :int)
  (q :int))

(defcfun ("glTexCoord4s" glTexCoord4s) :void
  (s :short)
  (t_arg1 :short)
  (r :short)
  (q :short))

(defcfun ("glTexCoord1dv" glTexCoord1dv) :void
  (v :pointer))

(defcfun ("glTexCoord1fv" glTexCoord1fv) :void
  (v :pointer))

(defcfun ("glTexCoord1iv" glTexCoord1iv) :void
  (v :pointer))

(defcfun ("glTexCoord1sv" glTexCoord1sv) :void
  (v :pointer))

(defcfun ("glTexCoord2dv" glTexCoord2dv) :void
  (v :pointer))

(defcfun ("glTexCoord2fv" glTexCoord2fv) :void
  (v :pointer))

(defcfun ("glTexCoord2iv" glTexCoord2iv) :void
  (v :pointer))

(defcfun ("glTexCoord2sv" glTexCoord2sv) :void
  (v :pointer))

(defcfun ("glTexCoord3dv" glTexCoord3dv) :void
  (v :pointer))

(defcfun ("glTexCoord3fv" glTexCoord3fv) :void
  (v :pointer))

(defcfun ("glTexCoord3iv" glTexCoord3iv) :void
  (v :pointer))

(defcfun ("glTexCoord3sv" glTexCoord3sv) :void
  (v :pointer))

(defcfun ("glTexCoord4dv" glTexCoord4dv) :void
  (v :pointer))

(defcfun ("glTexCoord4fv" glTexCoord4fv) :void
  (v :pointer))

(defcfun ("glTexCoord4iv" glTexCoord4iv) :void
  (v :pointer))

(defcfun ("glTexCoord4sv" glTexCoord4sv) :void
  (v :pointer))

(defcfun ("glRasterPos2d" glRasterPos2d) :void
  (x :double)
  (y :double))

(defcfun ("glRasterPos2f" glRasterPos2f) :void
  (x :float)
  (y :float))

(defcfun ("glRasterPos2i" glRasterPos2i) :void
  (x :int)
  (y :int))

(defcfun ("glRasterPos2s" glRasterPos2s) :void
  (x :short)
  (y :short))

(defcfun ("glRasterPos3d" glRasterPos3d) :void
  (x :double)
  (y :double)
  (z :double))
